S302T500-434 #time 43m Fixed JUnit tests broken with change to dto ?fix